# HairHaven

backend/: .env  .env.local  index.js  package-lock.json  package.json  pyproject.toml
backend/app/: main.py  models.py
hairhaven/: .env  csk-t2jcnr6258vty3tk2j32n48mdp4n2p2e5vrcyke2c5hp4f26.code-search  fconfig.js  package-lock.json  package.json
hairhaven/pages/api/auth/: [...nextauth].js  chat.js
hairhaven/src/app/: Login.jsx  SessionProvider.tsx  fconfig.tsx  layout.tsx  page.tsx
hairhaven/src/app/components/: dashboard.tsx  events.tsx  forgot.tsx  login.tsx
hairhaven/src/app/dashboard/: BarberDashboard.tsx  BarberProfile.tsx  Customer.tsx  CustomerSearch.tsx  CustomerView.tsx  Navigator.tsx  ThreeDModel.js  dashboard.tsx  landing.tsx  page.tsx  realdashboard.tsx  search.tsx
hairhaven/src/app/forgot/: page.tsx
hairhaven/src/app/landing/: page.tsx
hairhaven/src/app/login/: page.tsx
hairhaven/src/app/register/: page.tsx
hairhaven/src/components/: dashboard.tsx  events.tsx  exampleprofile.tsx  forgot.tsx  landing.tsx  login.tsx  mobile.tsx  realdashboard.tsx  register.tsx  upcoming.tsx
web-app/: package-lock.json  package.json
web-app/landing/: package-lock.json  package.json
web-app/src/app/: Login.tsx  SessionProvider.tsx  fconfig.tsx  globals.css  layout.tsx  page.tsx
web-app/src/app/dashboard/: page.tsx
web-app/src/app/forgot/: page.tsx
web-app/src/app/login/: page.tsx
web-app/src/components/: dashboard.tsx  events.tsx  first.tsx  instructors.tsx  profile.tsx  realdash.tsx  register.tsx  search.tsx  second-profile.tsx
(+6 files in other folders)
